# deforge-ela

./: .gitignore  ELA-140k-Real-and-Fake-Faces.ipynb  ELA-AIGC-Detection-Benchmark.ipynb  ELA-MS-COCOAI.ipynb  ELA-train.ipynb  main.py  pyproject.toml  test-ela-cnn.ipynb  train-ela-cnn-ela-transform.ipynb  train-ela-cnn-old.ipynb  train-ela-cnn-one-block.ipynb  train-ela-cnn.ipynb
docs/: Referat_ELA_Detectie_imagini_generate_folosind_IA.odt
